syntax = "proto3";

package hello.v2;

option go_package = "github.com/iamNilotpal/grpc/proto;pb";

message SayHelloRequest {
  string firstName = 1;
  string lastName = 2;
}

message SayHelloResponse {
  string message = 1;
}

service HelloService {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse);
}

